--- a/bootstrap_framework.html
+++ b/bootstrap_framework.html
@@ -88,15 +88,15 @@
        </div>
        <!--first row finish-->
        <div id="subscribe" class="row bg-warning text-center text-dark p-5">
-            <h3 class="col-12 text-center text-dark p-2">SUBSCRIBE TO OUR NEWSLETTER</h3>
+            <h3 class="col-md-12 col-sm-12 text-center text-dark p-2">SUBSCRIBE TO OUR NEWSLETTER</h3>
        </div>
        <div class="row bg-warning text-center text-dark p-2"> 
-              <article class="col-3 text-dark text-center p-2"><input type="text" name="txtname" placeholder="FIRST NAME" readonly></article>
-              <article class="col-3 text-dark text-center p-2"><input type="text" name="txtname" placeholder="FIRST NAME" readonly></article>
-              <article class="col-3 text-dark text-center p-2"><input type="email" name="ememail" placeholder="E-MAIL ADDRESS" readonly></article>
-              <article class="col-3 text-center text-light p-2 active bg-secondary"><input type="submit" value="SUBSCRIBE" name="txtsubscribe" placeholder="SUBSCRIBE" readonly></article>
+              <article class="col-md-3 col-sm-12 text-dark text-center p-2"><input type="text" name="txtname" placeholder="FIRST NAME" readonly></article>
+              <article class="col-md-3 col-sm-12 text-dark text-center p-2"><input type="text" name="txtname" placeholder="FIRST NAME" readonly></article>
+              <article class="col-md-3 col-sm-12 text-dark text-center p-2"><input type="email" name="ememail" placeholder="E-MAIL ADDRESS" readonly></article>
+              <article class="col-md-3 col-sm-12 text-center text-light p-2 active bg-secondary"><input type="submit" value="SUBSCRIBE" name="txtsubscribe" placeholder="SUBSCRIBE" readonly></article>
        </div>
-       <div class="content">
+       <div class="content bg-dark">
        <div id="our-team" class="row bg-dark">
            <h2 class="col-12 text-center text-light p-3">OUR TEAM</h2>
            <P class=" col-12 p-3 text-center text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam recusandae natus voluptatem laboriosam, rem voluptas, eius placeat quos sunt non et vitae magni tempore quas facilis blanditiis impedit aspernatur est. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi nam unde assumenda recusandae? Excepturi molestiae suscipit rerum minus unde porro blanditiis iure vitae. Magnam quod ex corrupti quisquam! Pariatur, dicta.</P>
