--- a/about_me.html
+++ b/about_me.html
@@ -7,7 +7,9 @@
     <title>Basic Template Structure using Bootstrap</title>
     <link rel="shortcut icon" href="./images/Bootstrap-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style_about.css">
-   
+
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
+
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
@@ -570,11 +572,11 @@
             <div class="col-md-4 col-sm-12" id="subform1">
                 <h4 class="text-center text-dark"><i class="fa fa-home"></i><br> 70 Trend Rd,Luton LU3 1TA</h4>
             </div>
-            <div class="col-4" id="subform1">
+            <div class="col-md-4 col-sm-12" id="subform1">
                
                <h4 class="text-center text-dark"><i class="fa fa-envelope"></i><br> sales@yourwebsite.com</h4>
            </div>
-           <div class="col-4" id="subform1">
+           <div class="col=md-4 col-sm-12" id="subform1">
                
                <h4 class="text-center text-dark"><i class="fa fa-phone"></i><br> +0000 0000 0000</h4>
            </div>
@@ -621,6 +623,8 @@
          </div>
      </div>
    </div>
+
+ <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
 
 <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
 <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
